--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "add": "^2.0.6",
-    "react": "18.2.0",
+    "frisbee": "^3.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0"
@@ -27,7 +31,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/react-native-form": "^2.1.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
