--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "add": "^2.0.6",
+    "expo": "^49.0.13",
     "frisbee": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
